# checkersMate

./: CMakeLists.txt  LICENSE
include/checkersMate/: Board.h  ChessTools.h  Coordinates.h  Exceptions.h
include/checkersMate/networking/: ChessBoardHeader.h  ChessBoardSegment.h  ChessPieceHeader.h  ChessPieceSegment.h  Engine.h  GuestEngine.h  HostEngine.h
include/checkersMate/pieces/: Bishop.h  Horse.h  King.h  Pawn.h  Piece.h  PieceColour.h  PieceType.h  Queen.h  Tower.h
src/: Board.cpp  Coordinates.cpp  main.cpp
src/networking/: GuestEngine.cpp  HostEngine.cpp
src/pieces/: Bishop.cpp  Horse.cpp  King.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Tower.cpp
tests/: Bishop.cpp  Board.cpp  CMakeLists.txt  ChessBoardHeader.cpp  ChessBoardSegment.cpp  Coordinates.cpp  Engine.cpp  Horse.cpp  King.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Tower.cpp
